# ChangeLog for www-servers/nginx
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.289 2011/09/09 16:44:14 hollow Exp $

*nginx-1.1.2-r10 (04 Oct 2011)

  04 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -nginx-1.1.2-r9.ebuild, +nginx-1.1.2-r10.ebuild, +files/cgiwrap-fcgi.init,
  +files/cgiwrap-fcgi.pl:
  Add cgiwrap-fcgi daemon.

*nginx-1.1.2-r9 (04 Oct 2011)

  04 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -nginx-1.1.2.ebuild, +nginx-1.1.2-r9.ebuild:
  Add support passenger-3.0.8

  09 Sep 2011; Benedikt Böhm <hollow@gentoo.org> nginx-1.0.4.ebuild,
  nginx-1.0.5.ebuild, nginx-1.0.6.ebuild, nginx-1.1.2.ebuild:
  remove ipv6 warning wrt #382393

*nginx-1.1.2 (07 Sep 2011)
*nginx-1.0.6 (07 Sep 2011)

  07 Sep 2011; Benedikt Böhm <hollow@gentoo.org> +nginx-1.0.6.ebuild,
  +nginx-1.1.2.ebuild, files/nginx.init-r2, metadata.xml:
  version bump wrt #381153. also fixes bugs #379477, #377713 and #373677.

*nginx-1.0.5 (25 Jul 2011)

  25 Jul 2011; Benedikt Böhm <hollow@gentoo.org> -nginx-0.8.53.ebuild,
  -nginx-0.8.53-r1.ebuild, -nginx-1.0.0.ebuild, -nginx-1.0.0-r1.ebuild,
  -nginx-1.0.2.ebuild, +nginx-1.0.5.ebuild,
  -files/passenger-3.0.1-cflags.patch,
  -files/passenger-3.0.1-missing-auto-feature.patch,
  -files/passenger-3.0.1-missing-include.patch, -files/passenger-CFLAGS.patch:
  version bump wrt #375781. cleanup wrt #348501 and #349276.

  15 Jul 2011; Markus Meier <maekke@gentoo.org> nginx-1.0.4.ebuild:
  x86 stable, bug #373633

  02 Jul 2011; Markos Chandras <hwoarang@gentoo.org> nginx-1.0.4.ebuild:
  Stable on amd64 wrt bug #373633

*nginx-1.0.4 (02 Jun 2011)

  02 Jun 2011; Benedikt Böhm <hollow@gentoo.org> nginx-1.0.2.ebuild,
  +nginx-1.0.4.ebuild:
  version bump wrt #369631. also fixes #369617

  24 May 2011; Markus Meier <maekke@gentoo.org> nginx-1.0.0-r1.ebuild:
  x86 stable, bug #368219
