@@ -1,5 +1,5 @@
 AUX cgiwrap-fcgi.init 659 RMD160 8740bcc05a0911a58dc470e6b455d8a452d31584 SHA1 853d8bdb044c4cddd7fa86f4700fa5a8fb297477 SHA256 e2e508255b764679b7c564bf42d2da6d56428387fbb91fa123d0a7815dd7e3fb
-AUX cgiwrap-fcgi.pl 3387 RMD160 5f73d72e4812ce991de31c4ce75a100151b0c324 SHA1 6c8ec601db9c83f2281aa7c822143b4d47a31e9e SHA256 2ec28a105e7df07ff14b4b8558e9cbf42491bb457f39d4a3f4c6a741ff443091
+AUX cgiwrap-fcgi.pl 3384 RMD160 3b656ee64cb0f63a2033482fec5ecb3425cea943 SHA1 4ef7e281b01360a8e7d6531795c0eb65fd5c0bb7 SHA256 837d4a59bc8e76848e0b2b3120833dc494bc6f297e33e75089ebd35a35977d7d
 AUX nginx.conf-r4 1358 RMD160 a948df249a16be86c114d587cfa5ee570d84a356 SHA1 e9db0447a1beb326a0858cf8189328229d1d3edf SHA256 6ff6c9301ea2a4d74a335b9119d7f9dba87d4e83793cf22d837d49f061763096
 AUX nginx.init-r2 1827 RMD160 2ece9278fd4a3ca948106e024c2607fca02e2599 SHA1 76af70e8fcad8b298851382d18160d11dc3e2cca SHA256 89801c2e0ea3480380dedfbc84b0cc993ab6b93768886246a22e650ba0a61798
 AUX nginx.logrotate 364 RMD160 9fdfd2ea2f49b8dba20a030d893e34779bb32364 SHA1 4ab07992fa5c64f753e3643e1b51fcab4dec6ccf SHA256 9e3e090dfd10861d5f9b279e19113ce8d05caf9f33d488f6aabf9f19ac0cf925
@@ -13,5 +13,6 @@ DIST ngx_slowfs_cache-1.6.tar.gz 10972 RMD160 e1d10851db4a55fc465665caa3f6989d14
 DIST ngx_upload_progress-0.8.2.tar.gz 16559 RMD160 3aadb9bf9b15b3810d1acb466d331ea5bdae6062 SHA1 cbff2734cccc3ac93b3422a9a01547af29f9c11d SHA256 cab70d2e300cfa0d9d7d3b34bf27810533ecbf11dddcd5078a4754cfab337c95
 DIST passenger-3.0.8.tar.gz 2362561 RMD160 1264b76a3440492b3d435050007611735a627c72 SHA1 265d1dcb66a29b944fa475f7d6831ce16ac37e2e SHA256 ccef21dc97b54de17c1d44644b2bc67b7732a860ff67206a4c557727311a8349
 EBUILD nginx-1.1.2-r11.ebuild 11583 RMD160 2a665bc67d49f085baafeb6cb9f2a5a2d6e2e01d SHA1 4953dbe3dbac29022cdb61a0df1cdd51f490fcb5 SHA256 0a8aa9f49bc1b3a63f7b4d1c2b3b26bec8223d447516cc25b4d12abc6eb64c12
-MISC ChangeLog 47899 RMD160 2fd3f3a9466abcb048d5155cd5c6987a94c69bdf SHA1 aeb5bdc8a5072b0b1fe14cf16334904b0cc86af4 SHA256 1527b46149d4bc47deaf3d4003e2aa54b4207c86a56b25b20e9ff3be962e05ca
+EBUILD nginx-1.1.2-r12.ebuild 11583 RMD160 2a665bc67d49f085baafeb6cb9f2a5a2d6e2e01d SHA1 4953dbe3dbac29022cdb61a0df1cdd51f490fcb5 SHA256 0a8aa9f49bc1b3a63f7b4d1c2b3b26bec8223d447516cc25b4d12abc6eb64c12
+MISC ChangeLog 48066 RMD160 4345372e01882914b5139dec2725ea79d6e0cc81 SHA1 4c4b381ec65c74ea1a3666617e62a353f634a2f8 SHA256 f0646085338da695c2f6e2e59403fe676c1ba297eb3dc455a09844b6c78411bb
 MISC metadata.xml 2402 RMD160 fee632a79ad08ef0fe36cd73d718a81348d71370 SHA1 12b7d3eac7a8e9f99dbe2b64bc288aa5e3f4608c SHA256 f133dca88780f2716797c5d2fc309466013d35b3dccf752ab27fb4ee399c6e47
