@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.289 2011/09/09 16:44:14 hollow Exp $
 
+*nginx-1.1.2-r12 (06 Oct 2011)
+
+  06 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +nginx-1.1.2-r12.ebuild, files/cgiwrap-fcgi.pl:
+  Update cgiwrap script
+
 *nginx-1.1.2-r10 (04 Oct 2011)
 
   04 Oct 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
